--- a/Lab practical 2 - Group 17/profile.html
+++ b/Lab practical 2 - Group 17/profile.html
@@ -206,11 +206,11 @@
 													</li>
 													<li data-filter="publish" class="btn">
 														<input type="radio">
-														<a href="#"><span>Publish</span></a> 
+														<a href="#"><span>Recently accessed</span></a> 
 													</li>
 													<li data-filter="pending" class="btn">
 														<input type="radio">
-														<a href="#"><span>Pending</span></a> 
+														<a href="#"><span>Completed</span></a> 
 													</li>
 												</ul>
 											</div>
