--- a/Lab practical 2 - Group 17/profile.html
+++ b/Lab practical 2 - Group 17/profile.html
@@ -476,30 +476,30 @@
 									</div>
 									<div class="tab-pane" id="quiz-results">
 										<div class="profile-head">
-											<h3>Quiz Results</h3>
+											<h3>Results</h3>
 										</div>
 										<div class="courses-filter">
 											<div class="row">
 												<div class="col-md-6 col-lg-6">
 													<ul class="course-features">
-														<li><i class="ti-book"></i> <span class="label">Lectures</span> <span class="value">8</span></li>
-														<li><i class="ti-help-alt"></i> <span class="label">Quizzes</span> <span class="value">1</span></li>
-														<li><i class="ti-time"></i> <span class="label">Duration</span> <span class="value">60 hours</span></li>
-														<li><i class="ti-stats-up"></i> <span class="label">Skill level</span> <span class="value">Beginner</span></li>
+														<li><i class="ti-book"></i> <span class="label">Course</span> <span class="value">Architecture</span></li>
+														<li><i class="ti-help-alt"></i> <span class="label">Quizze Results</span> <span class="value">96%</span></li>
+														<li><i class="ti-check-box"></i> <span class="label">Assignments Results</span> <span class="value">92%</span></li>
+														<li><i class="ti-time"></i> <span class="label">Course Duration</span> <span class="value">100 hours</span></li>
+														<li><i class="ti-stats-up"></i> <span class="label">Skill Level</span> <span class="value">Intermediate</span></li>
 														<li><i class="ti-smallcap"></i> <span class="label">Language</span> <span class="value">English</span></li>
-														<li><i class="ti-user"></i> <span class="label">Students</span> <span class="value">32</span></li>
-														<li><i class="ti-check-box"></i> <span class="label">Assessments</span> <span class="value">Yes</span></li>
+														<li><i class="ti-user"></i> <span class="label">Your Final Grade</span> <span class="value">A</span></li>
 													</ul>
 												</div>
 												<div class="col-md-6 col-lg-6">
 													<ul class="course-features">
-														<li><i class="ti-book"></i> <span class="label">Lectures</span> <span class="value">8</span></li>
-														<li><i class="ti-help-alt"></i> <span class="label">Quizzes</span> <span class="value">1</span></li>
-														<li><i class="ti-time"></i> <span class="label">Duration</span> <span class="value">60 hours</span></li>
-														<li><i class="ti-stats-up"></i> <span class="label">Skill level</span> <span class="value">Beginner</span></li>
+														<li><i class="ti-book"></i> <span class="label">Course</span> <span class="value">Lab Assistant</span></li>
+														<li><i class="ti-help-alt"></i> <span class="label">Quizze Results</span> <span class="value">90%</span></li>
+														<li><i class="ti-check-box"></i> <span class="label">Assignments Results</span> <span class="value">89%</span></li>
+														<li><i class="ti-time"></i> <span class="label">Course Duration</span> <span class="value">60 hours</span></li>
+														<li><i class="ti-stats-up"></i> <span class="label">Skill Level</span> <span class="value">Beginner</span></li>
 														<li><i class="ti-smallcap"></i> <span class="label">Language</span> <span class="value">English</span></li>
-														<li><i class="ti-user"></i> <span class="label">Students</span> <span class="value">32</span></li>
-														<li><i class="ti-check-box"></i> <span class="label">Assessments</span> <span class="value">Yes</span></li>
+														<li><i class="ti-user"></i> <span class="label">Your Final Grade</span> <span class="value">A-</span></li>
 													</ul>
 												</div>
 											</div>
